-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14
-
Component/s: client-libs
-
b07
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8245440 | 13.0.4 | Matthias Baesken | P4 | Resolved | Fixed | b02 |
| JDK-8232668 | 11.0.6-oracle | Matthias Baesken | P4 | Resolved | Fixed | b02 |
| JDK-8231997 | 11.0.6 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
Currently we assign NULL two times in gtk2_interface.c to gint values. This should be fixed.
Otherwise it leads to warning like this (xlc16 / clang) :
/jdk/src/java.desktop/unix/native/libawt_xawt/awt/gtk2_interface.c:2454:10: warning: incompatible pointer to integer conversion initializing 'gint' (aka 'int') with an expression of type 'void *' [-Wint-conversion]
gint intval = NULL;
^ ~~~~
/jdk/src/java.desktop/unix/native/libawt_xawt/awt/gtk2_interface.c:2461:10: warning: incompatible pointer to integer conversion initializing 'gint' (aka 'int') with an expression of type 'void *' [-Wint-conversion]
gint intval = NULL;
^ ~~~~
Otherwise it leads to warning like this (xlc16 / clang) :
/jdk/src/java.desktop/unix/native/libawt_xawt/awt/gtk2_interface.c:2454:10: warning: incompatible pointer to integer conversion initializing 'gint' (aka 'int') with an expression of type 'void *' [-Wint-conversion]
gint intval = NULL;
^ ~~~~
/jdk/src/java.desktop/unix/native/libawt_xawt/awt/gtk2_interface.c:2461:10: warning: incompatible pointer to integer conversion initializing 'gint' (aka 'int') with an expression of type 'void *' [-Wint-conversion]
gint intval = NULL;
^ ~~~~
- backported by
-
JDK-8231997 avoid incompatible pointer to integer conversion initializing gint in gtk2_interface
-
- Resolved
-
-
JDK-8232668 avoid incompatible pointer to integer conversion initializing gint in gtk2_interface
-
- Resolved
-
-
JDK-8245440 avoid incompatible pointer to integer conversion initializing gint in gtk2_interface
-
- Resolved
-