8228368: avoid incompatible pointer to integer conversion initializing gint in gtk2_interface

Reviewed-by: prr